# Autonomous-FTEs

AI_Employee_Vault/: .env.example  .gitignore  CLAUDE.md  (+2 more)
AI_Employee_Vault/silver/: GMAIL_ACCOUNT_CHANGE_GUIDE.md  GMAIL_ACCOUNT_CHANGE_SUCCESS.md  HACKATHON_COMPLIANCE_REPORT.md  HITL_COMPLETE.md  LINKEDIN_FIX_GUIDE.md  QUICK_START.md  README.md  SCHEDULING_GUIDE.md  SILVER_TIER_STATUS.md  SILVER_TIER_TEST_RESULTS.md  SILVER_TIER_TEST_RESULTS_FINAL.md  TESTING_GUIDE.md  TEST_GUIDE.md  TROUBLESHOOTING.md  WHATSAPP_LOADING_ISSUE.md  WHATSAPP_USAGE_GUIDE.md  fix_linkedin_post.py  pyproject.toml  quick_test.sh  start_watchers.sh  test_linkedin_now.sh
AI_Employee_Vault/silver/config/: .env.example  .message_cache.json  approval_rules.yaml  watcher_config.yaml
AI_Employee_Vault/silver/config/linkedin_session/: Local State  first_party_sets.db
AI_Employee_Vault/silver/config/linkedin_session/Default/: Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
AI_Employee_Vault/silver/config/linkedin_session/Default/DawnGraphiteCache/: data_1  index
AI_Employee_Vault/silver/config/linkedin_session/Default/DawnWebGPUCache/: data_1  index
AI_Employee_Vault/silver/config/linkedin_session/Default/Extension Rules/: LOG
AI_Employee_Vault/silver/config/linkedin_session/GrShaderCache/: data_1  index
AI_Employee_Vault/silver/config/linkedin_session/GraphiteDawnCache/: data_1  index
AI_Employee_Vault/silver/config/linkedin_session/ShaderCache/: data_1  index
AI_Employee_Vault/silver/config/linkedin_session/segmentation_platform/: ukm_db
AI_Employee_Vault/silver/config/schedules/: schedules.yaml
AI_Employee_Vault/silver/debug_screenshots/: debug_page.html
AI_Employee_Vault/silver/mcp/email-server/: README.md  pyproject.toml  server.py  test_server.py
AI_Employee_Vault/silver/scripts/: dashboard.py  debug_linkedin.py  debug_linkedin_post.py  debug_whatsapp_comprehensive.py  debug_whatsapp_contacts.py  debug_whatsapp_page.py  health_check.py  inspect_linkedin_buttons.py  linkedin_scheduler.py  list_whatsapp_contacts.py  list_whatsapp_contacts_v2.py  reset_gmail_auth.py  reset_whatsapp_session.py  setup_cron.sh  setup_gmail.py  setup_linkedin.py  setup_whatsapp.py  shutdown.sh  start_watchers.sh  startup.sh  test_actions.py  test_all_integrations.py  test_approval.py  test_comprehensive.py  test_email.py  test_functionality.py  test_gmail_connection.py  test_gmail_watcher_quick.py  test_hitl_workflow.py  test_integration.py  test_linkedin.py  test_linkedin_correct_flow.py  test_linkedin_fixed.py  test_scheduler.py  test_watchers.sh  test_whatsapp_debug.py  test_whatsapp_flexible.py  test_whatsapp_patient.py  test_whatsapp_quick.py  test_whatsapp_simple.py
AI_Employee_Vault/silver/src/actions/: __init__.py  action_executor.py  email_sender.py  whatsapp_sender.py
AI_Employee_Vault/silver/src/approval/: __init__.py  approval_checker.py  approval_manager.py  approval_notifier.py
AI_Employee_Vault/silver/src/planning/: __init__.py  plan_generator.py  plan_tracker.py  task_analyzer.py
AI_Employee_Vault/silver/src/scheduling/: __init__.py  schedule_manager.py  scheduler.py
AI_Employee_Vault/silver/src/utils/: __init__.py  dashboard_updater.py  error_recovery.py  file_utils.py  logger.py  performance.py  validators.py  yaml_parser.py
AI_Employee_Vault/silver/src/watchers/: __init__.py  base_watcher.py  gmail_watcher.py  linkedin_poster.py  whatsapp_watcher.py
(+1905 files in other folders)
